tests/baselines/reference/higherKindedTypes.errors.txt
tests/cases/compiler/higherKindedTypes.ts(37,5): error TS2322: Type 'F<A>' is not assignable to type 'F<B>'.
  Type 'F<A>' is not assignable to type 'F<B>'.
tests/cases/compiler/higherKindedTypes.ts(40,28): error TS2345: Argument of type 'FunctorX<string>' is not assignable to parameter of type 'F<string>'.
  Types of property 'map' are incompatible.
    Type '<B>(f: (a: string) => B) => FunctorX<B>' is not assignable to type '<B>(f: (a: string) => B) => F<B>'.
      Type 'FunctorX<B>' is not assignable to type 'F<B>'.
tests/cases/compiler/higherKindedTypes.ts(40,38): error TS7006: Parameter 'val' implicitly has an 'any' type.
tests/cases/compiler/higherKindedTypes.ts(43,28): error TS2345: Argument of type 'FunctorY<string>' is not assignable to parameter of type 'F<string>'.
  Types of property 'map' are incompatible.
    Type '<B>(f: (a: string) => B) => FunctorY<B>' is not assignable to type '<B>(f: (a: string) => B) => F<B>'.
      Type 'FunctorY<B>' is not assignable to type 'F<B>'.
tests/cases/compiler/higherKindedTypes.ts(43,38): error TS7006: Parameter 'val' implicitly has an 'any' type.
tests/cases/compiler/higherKindedTypes.ts(46,28): error TS2345: Argument of type 'FunctorX<string>' is not assignable to parameter of type 'F<string>'.
tests/cases/compiler/higherKindedTypes.ts(46,38): error TS7006: Parameter 'val' implicitly has an 'any' type.
tests/cases/compiler/higherKindedTypes.ts(49,28): error TS2345: Argument of type 'FunctorY<string>' is not assignable to parameter of type 'F<string>'.
tests/cases/compiler/higherKindedTypes.ts(49,38): error TS7006: Parameter 'val' implicitly has an 'any' type.


==== tests/cases/compiler/higherKindedTypes.ts (9 errors) ====
    interface Functor<A, Container<_T>> {
        map<B>(f: (a: A) => B): Container<B>;
    }
    
    interface FunctorX<A> extends Functor<A, FunctorX> {
        map<B>(f: (a: A) => B): FunctorX<B>;
        xVal: string;
    }
    
    interface FunctorY<A> extends Functor<A, FunctorY> {
        map<B>(f: (a: A) => B): FunctorY<B>;
        yVal: A;
    }
    
    declare const initialX: FunctorX<string>;
    declare const initialY: FunctorY<string>;
    
    const resultX1 = initialX.map(val => val.length);
    const expectX1: FunctorX<number> = resultX1;
    
    const resultY1 = initialY.map(val => val.length);
    const expectY1: FunctorY<number> = resultY1;
    
    const resultX2 = initialX.map(val => [val]);
    const expectX2: FunctorX<string[]> = resultX2;
    
    const resultY2 = initialY.map(val => [val]);
    const expectY2: FunctorY<string[]> = resultY2;
        
    
    function staticMap<F<_T> extends Functor<_T, F>, A, B>(fa: F<A>, f: (a: A) => B): F<B> {
        const result = fa.map(f);
        return result;
    }
    
    function staticMapBadImplementation<F<_T> extends Functor<_T, F>, A, B>(fa: F<A>, f: (a: A) => B): F<B> {
        return fa;
        ~~~~~~~~~~
!!! error TS2322: Type 'F<A>' is not assignable to type 'F<B>'.
!!! error TS2322:   Type 'F<A>' is not assignable to type 'F<B>'.
    }
    
    const resultX3 = staticMap(initialX, val => val.length);
                               ~~~~~~~~
!!! error TS2345: Argument of type 'FunctorX<string>' is not assignable to parameter of type 'F<string>'.
!!! error TS2345:   Types of property 'map' are incompatible.
!!! error TS2345:     Type '<B>(f: (a: string) => B) => FunctorX<B>' is not assignable to type '<B>(f: (a: string) => B) => F<B>'.
!!! error TS2345:       Type 'FunctorX<B>' is not assignable to type 'F<B>'.
                                         ~~~
!!! error TS7006: Parameter 'val' implicitly has an 'any' type.
    const expectX3: FunctorX<number> = resultX3;
    
    const resultY3 = staticMap(initialY, val => val.length);
                               ~~~~~~~~
!!! error TS2345: Argument of type 'FunctorY<string>' is not assignable to parameter of type 'F<string>'.
!!! error TS2345:   Types of property 'map' are incompatible.
!!! error TS2345:     Type '<B>(f: (a: string) => B) => FunctorY<B>' is not assignable to type '<B>(f: (a: string) => B) => F<B>'.
!!! error TS2345:       Type 'FunctorY<B>' is not assignable to type 'F<B>'.
                                         ~~~
!!! error TS7006: Parameter 'val' implicitly has an 'any' type.
    const expectY3: FunctorY<number> = resultY3;
    
    const resultX4 = staticMap(initialX, val => [val]);
                               ~~~~~~~~
!!! error TS2345: Argument of type 'FunctorX<string>' is not assignable to parameter of type 'F<string>'.
                                         ~~~
!!! error TS7006: Parameter 'val' implicitly has an 'any' type.
    const expectX4: FunctorX<string[]> = resultX4;
    
    const resultY4 = staticMap(initialY, val => [val]);
                               ~~~~~~~~
!!! error TS2345: Argument of type 'FunctorY<string>' is not assignable to parameter of type 'F<string>'.
                                         ~~~
!!! error TS7006: Parameter 'val' implicitly has an 'any' type.
    const expectY4: FunctorY<string[]> = resultY4;
    